--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ body{
 .signup-button:hover{
     background-color: var(--very-light-red);
     color: white;
+    cursor: pointer;
 }
 header{
     height: 90vh;
@@ -121,4 +122,100 @@ header>ul{
 .learn-more:hover{
     background-color: white;
     color: var(--light-red);
+    cursor: pointer;
+}
+main{
+    display: flex;
+    flex-direction: column;
+}
+main>section:not(:first-child){
+    margin-bottom: 3rem;
+}
+main>h2{
+    color: black;
+    text-align: center;
+    font-size: 2rem;
+    margin: 4rem 0;
+}
+.section-one{
+    color: black;
+    display: flex;
+    flex-direction: row;
+    padding: 0 8rem;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+}
+.flex-box{
+    display: flex;
+    flex-direction: column;
+    width: 35%;
+    font-size: 1.2rem;
+}
+main>h3{
+    font-size: 3rem;
+}
+.flex-box>div:first-child{
+    margin-bottom: 5rem;
+}
+.img-position{
+    margin-left: -500px !important;
+}
+.img-container{
+    width: 65%;
+    text-align: right;
+}
+.editor-img{
+    width: 120%;
+    margin-right: -250px;
+    overflow: hidden;
+}
+
+.section-two{
+    background: url(./bg-pattern-circles.svg),var(--very-dark-desaturated-blue);
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: 0 50%;
+}
+.section-three{
+    flex-direction: row-reverse;
+}
+.section-three>.img-container>img{
+    margin-left: -800px;
+}
+footer{
+    background-color: rgb(0, 0, 43);
+    color: white;
+    border-top-right-radius: 100px;
+    text-decoration: none;
+    padding: 70px 0;
+}
+footer a{
+    color: white;
+}
+.footer_box{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-bottom: 64px;
+}
+footer a{
+    font-weight: bold;
+    font-size: 64px;
+}
+footer h4{
+    font-size: 24px;
+    font-weight: 500;
+    margin-bottom: 24px;
+}
+footer li:hover{
+    cursor: pointer;
+    color: white;
+}
+footer p{
+    text-align: center;
+}
+footer li{
+    color: rgb(172, 172, 172);
+    margin-bottom: 10px;
 }
