--- a/style.css
+++ b/style.css
@@ -158,24 +158,52 @@ main>h3{
 .flex-box>div:first-child{
     margin-bottom: 5rem;
 }
-.img-position{
-    margin-left: -500px !important;
-}
 .img-container{
     width: 65%;
     text-align: right;
 }
-.editor-img{
+#editor-img{
     width: 120%;
     margin-right: -250px;
     overflow: hidden;
 }
-
+#img-editor{
+    width: 100%;
+    margin-right: 300px;
+    overflow: hidden;
+}
 .section-two{
-    background: url(./bg-pattern-circles.svg),var(--very-dark-desaturated-blue);
+    background: url(./bg-pattern-circles.svg),linear-gradient(to right, var(--very-dark-gray-blue), var(--very-dark-desaturated-blue) 70%);
+    border: 2px solid lime;
     background-repeat: no-repeat;
-    background-size: contain;
-    background-position: 0 50%;
+    background-size: 50%;
+    background-position: 0 100%;
+    height: 350px;
+    margin: 100px 0;
+    border-radius: 0 100px 0 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.section-two>div{
+    flex: 1;
+}
+.section-two>div:nth-child(2){
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 20rem;
+}
+.section-two>div:nth-child(2)>h3{
+    font-size: 2rem;
+}
+.section-two>div:nth-child(2)>h3>p{
+    font-size: 1.2rem;
+}
+#mobile-img{
+    position: relative;
+    top: -150px;
+    left: 50px;
 }
 .section-three{
     flex-direction: row-reverse;
